# inf8702

./: .gitignore  CMakeLists.txt  MaskMaker.py  README.md  main.cpp  poisson.cl  poisson.hpp  poisson_serial.cpp  poisson_serial.hpp  poisson_tbb.cpp  poisson_tbb.hpp
acier/: algorithm.hpp  compressed_member.hpp  operators.hpp  type_traits.hpp
cl/: cl.hpp  command_queue.cpp  command_queue.hpp  context.hpp  device.hpp  error.hpp  event.cpp  event.hpp  kernel.cpp  kernel.hpp  memory.cpp  memory.hpp  platform.cpp  platform.hpp  program.cpp  program.hpp  sampler.hpp  utility.hpp  wrapper.hpp
gil/: image_file.hpp  mat.hpp  vec.hpp
inf8702.xcodeproj/: project.pbxproj
inf8702.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
inf8702.xcodeproj/project.xcworkspace/xcuserdata/Etienne.xcuserdatad/: UserInterfaceState.xcuserstate
inf8702.xcodeproj/xcuserdata/Etienne.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
inf8702.xcodeproj/xcuserdata/Etienne.xcuserdatad/xcschemes/: inf8702.xcscheme  poisson-image-editing.xcscheme  xcschememanagement.plist
poisson-image-editing/examples/: seamless_cloning.cpp
poisson-image-editing/inc/blend/: blend.h
